--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <body>
         <div class="container">
             <div class="section">
+                <div class="header"></div>
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
                 <!-- Multiple choice question -->
